# portableapps-launcher-maker

./: .gitignore  README.md  build_portableapps_release.ps1  build_portableapps_release_x86.ps1  package_github_release.ps1  pyproject.toml
app/: portableapps_core.py  portableapps_launcher_maker.py  portableapps_main.py  portableapps_ui_theme.py  portableapps_webview.py  version.py
app/assets/web/: app.css  app.js  index.html
tests/: test_portableapps_launcher_maker.py
